--- a/session2/requirements.txt
+++ b/session2/requirements.txt
@@ -1,6 +1,17 @@
-streamlit==1.31.0
+streamlit==1.32.0
 boto3
 Pillow==10.1.0
 botocore
 python-dotenv==1.0.1
 uuid==1.30
+numpy==1.26.0
+pandas==2.1.1
+matplotlib==3.8.0
+plotly==5.18.0
+scikit-learn>=1.3.0
+uuid==1.30
+transformers>=4.30.0
+langchain
+langchain_aws
+torch>=2.0.0
+seaborn>=0.12.0
