--- a/session2/requirements.txt
+++ b/session2/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.39.0
+streamlit==1.45.0
 boto3
 Pillow==10.1.0
 botocore
@@ -13,5 +13,6 @@ uuid==1.30
 transformers>=4.30.0
 langchain
 langchain_aws
-torch>=2.0.0
+torch
 seaborn>=0.12.0
+amazon_transcribe
