--- a/session3/requirements.txt
+++ b/session3/requirements.txt
@@ -4,10 +4,10 @@ botocore
 pandas
 langchain_core
 langchain
+langchain_aws
 langchain_community
 pypdf
-faiss-cpu
-faiss-gpu
+chromadb
 numpy==1.26.0
 matplotlib==3.8.0
 seaborn==0.13.0
