--- a/session3/requirements.txt
+++ b/session3/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.45.0
+streamlit
 boto3
 botocore
 pandas
@@ -8,10 +8,10 @@ langchain_aws
 langchain_community
 pypdf
 chromadb
-numpy==1.26.0
+numpy
 matplotlib==3.8.0
 seaborn==0.13.0
 pillow==10.1.0
 plotly==5.18.0
 streamlit-lottie==0.0.5
-requests==2.31.0
+requests
