Updates by Kiro

--- a/session3/requirements.txt
+++ b/session3/requirements.txt
@@ -1,17 +1,13 @@
-streamlit
+streamlit==1.52.0
 boto3
 botocore
 pandas
 langchain_core
-langchain
 langchain_aws
 langchain_community
 pypdf
 chromadb
 numpy
-matplotlib==3.8.0
-seaborn==0.13.0
 pillow==10.1.0
-plotly==5.18.0
-streamlit-lottie==0.0.5
 requests
+strands-agents
