--- a/session2/requirements.txt
+++ b/session2/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.52.0
 boto3
 Pillow==10.1.0
 botocore
@@ -8,15 +8,9 @@ pandas==2.1.1
 matplotlib==3.8.0
 plotly==5.18.0
 transformers>=4.30.0
-langchain
 langchain_aws
-langchain-community
 torch
 seaborn
-amazon_transcribe
-nest_asyncio
-gensim
-nltk
 jsonlines
 scipy
 stqdm
