--- a/session4/requirements.txt
+++ b/session4/requirements.txt
@@ -1,21 +1,12 @@
-streamlit==1.39.0
+streamlit==1.52.0
 boto3
 botocore
-matplotlib
-langchain
-langchain_aws
-langchain-community
-seaborn
 pandas
-scikit-learn
-jsonlines
-shap
-nest_asyncio
-plotly
-networkx
-streamlit_lottie
-markdown==3.5
-markdownify==0.11.6
+numpy
 pillow==10.2.0
-uuid==1.30
-html-sanitizer==2.2.0
+plotly
+matplotlib
+networkx
+langchain_aws
+langchain_core
+jsonlines
